docs: keep the probes and the defect record the translation round produced
The tooling that survived the first translation round went into tools/i18n as
i18n.py. Three things did not, and they were the ones that could not be worked
out again from what is here.

probes/ reads wording off an OpenPnP that has actually started, which is the
only way to see the sentences the sources assemble rather than store. IssuesProbe
walks every milestone of Issues and Solutions and lists what came back with no
CJK in it; that output is exactly what `patterns --against` documents as its
input, and until now nothing in the repository produced it. ShowIssues dumps the
rows as the panel shows them, translated ones included, which is what a review
pass reads rather than counts. ReleaseCheck checks a packaged jar: that the
dependency closure the manifest declares resolves, and that the bundles got into
the archive.

None of them can be a test. They need a display they do not have, so they reach
`MainFrame` through sun.misc.Unsafe - a trick nobody would reconstruct from
scratch, and now documented in one place rather than copied into each probe.
ReleaseCheck deliberately asserts no particular rendering: an expected
translation written into a probe is a snapshot that goes stale the next time
someone improves the wording, and then reports a failure that is not one. It
found that out on its first run here, matching "Advanced camera Camera17
calibration." through a patterns template.

english-defects.md is the record of what the translators found in the English
itself - a tooltip on the wrong label, a button that read the same before and
after it was pressed, prose assembled from fragments that no language with cases
could carry. Most of it was invisible to every check in i18n.py, because the
translation was right and the English was wrong, which no comparison of the two
can adjudicate. Several entries are still open.

The fourth, LocaleDiscoveryProbe, belongs in the test suite instead: it ne